changed css for <body> & <main> to fix content getting cutted off on small screen

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -21,21 +21,20 @@
 }
 
 body { /* Left & right spacing is left & right from default body margin + 12px */
-	height: 100vh;
-	margin-top: 0;
-	margin-bottom: 0;
-	padding: var(--unit-two);
-	font-size: var(--font-size-main);
-}
-
-main {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: calc(100% - 9vh);
-	max-width: 15.938rem;
-	margin: 4.5vh auto;
+	min-height: 91vh;
+	margin-top: 4.5vh;
+	margin-bottom: 4.5vh;
+	padding: var(--twelve);
+	font-size: var(--font-size-primary);
 	text-align: center;
+}
+
+main {
+	width: 100%;
+	max-width: 15.938rem;
 }
 
 #tic-tac-toe {
